--- a/modules/main.css
+++ b/modules/main.css
@@ -1,11 +1,10 @@
 table.areadescription { margin: -10px -10px 2px -10px; border-collapse: separate; width: calc(100% + 20px); padding: 0; }
 
-table.areadescription .imageborder { padding: 3px;
-    background-color: #fafafa; width: 46px; height: 46px;
-    position: absolute; left: 4px; top: 4px; }
+table.areadescription .imageborder { padding: 3px; box-sizing: initial;
+    background-color: transparent; background-repeat: no-repeat; margin-right: 7px;
+    left: 4px; top: 4px; }
 
-table.areadescription .mainheader { padding-left: 70px; padding-top: 7px;
-    padding-bottom: 7px; font-size: 22px; background-color: #2980b9; color: #eee;
+table.areadescription .mainheader { font-size: 22px; background-color: #2980b9; color: #eee;
     border-bottom: 1px solid rgba(0,0,0,.2); text-shadow: 1px 1px 5px #888; }
 
 table.areadescription .areadescription { padding: 11px;
